@@ -16,6 +16,8 @@
 
 #include "testhelper.h"
 
+#ifdef ENABLE_ASYNC
+
 static int debug = 0;
 
 #define	DATA_SIZE	4096
@@ -292,3 +294,10 @@ main()
 
 	return 0;
 }
+#else
+int
+main(int argc, char** argv)
+{
+	return (0);
+}
+#endif
